<resources>
    <string name="app_name">Jikanime</string>
    <string name="my_email">zukronalviandy@gmail.com</string>
    <string name="anime">Anime</string>
    <string name="top">Top</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="genre">Genre</string>
    <string name="manga">Manga</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="episode">Episode</string>
    <string name="type">Type</string>
    <string name="double_dot">:</string>
    <string name="detail">Detail</string>
    <string name="myanimelist">Myanimelist</string>
    <string name="back">Back</string>
    <string name="volumes">Volumes</string>
    <string name="source">Source</string>
    <string name="score_by">Score by</string>
    <string name="status">Status</string>
    <string name="premiered">Premiered</string>
    <string name="aired">Aired</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="studio">Studio</string>
    <string name="producers">Producers</string>
    <string name="licensors">Licensors</string>
    <string name="adaptation">Adaptation</string>
    <string name="side_story">Side story</string>
    <string name="summary">Summary</string>
    <string name="sequel">Sequel</string>
    <string name="prequel">Prequel</string>
    <string name="spin_off">Spin off</string>
    <string name="role">Role</string>
    <string name="voice_actor">Voice actor</string>
    <string name="opening">Opening</string>
    <string name="ending">Ending</string>
    <string name="character">Character</string>
    <string name="chapter">Chapter</string>
    <string name="published">Published</string>
    <string name="authors">Authors</string>
    <string name="serialization">Serialization</string>
    <string name="detail_character">Detail Character</string>
    <string name="detail_anime">Detail Anime</string>
    <string name="detail_manga">Detail Manga</string>
    <string name="language">Language</string>
    <string name="animeography">Animeography</string>
    <string name="mangaography">Mangaography</string>
    <string name="favorite">Favorite</string>
    <string name="other">Other</string>
</resources>