<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:clickable="true"
    android:elevation="0dp"
    android:focusable="true"
    android:padding="10dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="2"
            android:useDefaultMargins="true">

            <TextView
                android:id="@+id/relatedItem_tvNo"
                android:layout_rowSpan="2"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:gravity="top"
                tools:text="1." />

            <TextView
                android:id="@+id/relatedItem_tvTitle"
                android:layout_row="0"
                android:layout_columnSpan="3"
                android:layout_gravity="fill"
                android:ellipsize="end"
                android:layout_width="1dp"
                android:maxLines="1"
                tools:text="Toaru Majutsu no Index Gaiden: Toaru Kagaku no Railgun" />

            <TextView
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:text="@string/type" />

            <TextView
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:text="@string/double_dot" />

            <TextView
                android:id="@+id/relatedItem_tvType"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_gravity="fill"
                tools:text="Manga" />
        </GridLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/detail"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_detail" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/relatedItem_flSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_overlay"
        android:visibility="gone">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:columnCount="3"
            android:useDefaultMargins="true"
            tools:ignore="UselessParent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/relatedItem_btnBack"
                android:layout_column="0"
                android:backgroundTint="@color/colorWarning"
                android:minWidth="40dp"
                android:minHeight="40dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/relatedItem_btnMyanimelist"
                android:layout_column="1"
                android:backgroundTint="@color/colorInfo"
                android:minWidth="40dp"
                android:minHeight="40dp"
                android:text="@string/myanimelist"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/relatedItem_btnDetail"
                android:layout_column="2"
                android:backgroundTint="@color/colorSuccess"
                android:minWidth="40dp"
                android:minHeight="40dp"
                android:text="@string/detail"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:cornerRadius="20dp" />
        </GridLayout>
    </FrameLayout>
</com.google.android.material.card.MaterialCardView>